5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1826_3180.log
== TEST (2019-06-12 18:45:25) 
-- CODE:
from numpy import*
a=int("dois pacientes foram infactados com o sorotipo 2: ")
b=int("um paciente teve o sorotipo 4: ")
c=int("um paciente teve o sorotipo 3: ")
d=int("dois paciente tiveram o virus com sorotipo 1: ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:45:40) 
-- CODE:
from numpy import*
a=int(input("dois pacientes foram infactados com o sorotipo 2: ")
b=int("um paciente teve o sorotipo 4: ")
c=int("um paciente teve o sorotipo 3: ")
d=int("dois paciente tiveram o virus com sorotipo 1: ")

-- ERROR:
File "XXXX", line 3
    b=int("um paciente teve o sorotipo 4: ")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:45:57) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int("um paciente teve o sorotipo 3: ")
d=int("dois paciente tiveram o virus com sorotipo 1: ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:46:29) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:47:44) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))

for(array(n, zeros(n, dtype=int)))

-- ERROR:
File "XXXX", line 8
    for(array(n, zeros(n, dtype=int)))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:47:59) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))

for(array(n, zeros(n, dtype=int))):

-- ERROR:
File "XXXX", line 8
    for(array(n, zeros(n, dtype=int))):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:05) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))

for(array(n, zeros(n, dtype=int))

-- ERROR:
File "XXXX", line 9
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:12) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))

for=array(n, zeros(n, dtype=int))

-- ERROR:
File "XXXX", line 8
    for=array(n, zeros(n, dtype=int))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:20) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))

for array(n, zeros(n, dtype=int))

-- ERROR:
File "XXXX", line 8
    for array(n, zeros(n, dtype=int))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:32) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))

for (array(n, zeros(n, dtype=int)))

-- ERROR:
File "XXXX", line 8
    for (array(n, zeros(n, dtype=int)))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:38) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))

for (n, zeros(n, dtype=int)))

-- ERROR:
File "XXXX", line 8
    for (n, zeros(n, dtype=int)))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:42) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))

for (n, zeros(n, dtype=int))

-- ERROR:
File "XXXX", line 8
    for (n, zeros(n, dtype=int))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:52) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))

while (n, zeros(n, dtype=int))

-- ERROR:
File "XXXX", line 8
    while (n, zeros(n, dtype=int))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:58) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))

while (n, zeros(n, dtype=int)):

-- ERROR:
File "XXXX", line 9
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:50:48) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))
array= eval([0])
while (n, zeros(n, dtype=int)):
	if(n)
-- ERROR:
File "XXXX", line 9
    if(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:50:55) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: "))
array= eval([0])
while (n, zeros(n, dtype=int)):
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:51:06) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: ")) 
array= eval([0])
while (n, zeros(n, dtype=int)):
-- ERROR:
File "XXXX", line 9
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:51:22) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: ")) 
array= eval([0])
while (n, zeros(n, dtype=int)):
	print(array)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:51:47) 
-- CODE:
from numpy import*

a=int(input("dois pacientes foram infactados com o sorotipo 2: "))
b=int(input("um paciente teve o sorotipo 4: "))
c=int(input("um paciente teve o sorotipo 3: "))
d=int(input("dois paciente tiveram o virus com sorotipo 1: ")) 
array= eval(n,[0])
while (n, zeros(n, dtype=int)):
	print(array)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:52:51) 
-- CODE:
from numpy import*

n=array(eval(int(input(":"))


array= eval(n,[0])
while (n, zeros(n, dtype=int)):
	print(array)
-- ERROR:
File "XXXX", line 6
    array= eval(n,[0])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:53:08) 
-- CODE:
from numpy import*

n=array(eval(int(input(":"))


fect= eval(n,[0])
while (n, zeros(n, dtype=int)):
	print(array)
-- ERROR:
File "XXXX", line 6
    fect= eval(n,[0])
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:53:17) 
-- CODE:
from numpy import*

n=array(eval(int(input(":"))

fect= eval(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 5
    fect= eval(n,[0])
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:53:50) 
-- CODE:
from numpy import*

n=array(eval(int(n,[0])))

fect= eval(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:54:37) 
-- CODE:
from numpy import*

n=array(eval(zeros(n, dtype=int)))

fect= eval(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:54:50) 
-- CODE:
from numpy import*

n=array(zeros(n, dtype=int)))

fect= eval(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 3
    n=array(zeros(n, dtype=int)))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:54:56) 
-- CODE:
from numpy import*

n=array(zeros(n, dtype=int))

fect= eval(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:55:20) 
-- CODE:
from numpy import*

n=array(eval(zeros(n, dtype=int)))

fect= (n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:55:40) 
-- CODE:
from numpy import*

n=array(ones(zeros(n, dtype=int)))

fect= (n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:55:49) 
-- CODE:
from numpy import*

n=array(ones(zeros(n, dtype=int)))

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:55:57) 
-- CODE:
from numpy import*

n=array(eval(zeros(n, dtype=int)))

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:56:08) 
-- CODE:
from numpy import*

n=zeros(n, dtype=int)

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:56:20) 
-- CODE:
from numpy import*

n=eval(zeros(n, dtype=int))

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:56:33) 
-- CODE:
from numpy import*

n=array(zeros(n, dtype=int))

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:56:39) 
-- CODE:
from numpy import*

n=for(zeros(n, dtype=int))

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 3
    n=for(zeros(n, dtype=int))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:56:50) 
-- CODE:
from numpy import*

n= for(zeros(n, dtype=int)):

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 3
    n= for(zeros(n, dtype=int)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:57:00) 
-- CODE:
from numpy import*

for(zeros(n, dtype=int))

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 3
    for(zeros(n, dtype=int))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:57:09) 
-- CODE:
from numpy import*

for(zeros(n, dtype=int)):

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 3
    for(zeros(n, dtype=int)):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:57:15) 
-- CODE:
from numpy import*

	for(zeros(n, dtype=int)):

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 3
    for(zeros(n, dtype=int)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:57:24) 
-- CODE:
from numpy import*

for=(zeros(n, dtype=int)):

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 3
    for=(zeros(n, dtype=int)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:57:34) 
-- CODE:
from numpy import*

for=(zeros(n, dtype=int)):

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 3
    for=(zeros(n, dtype=int)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:57:38) 
-- CODE:
from numpy import*

for=(zeros(n, dtype=int)):

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 3
    for=(zeros(n, dtype=int)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:13) 
-- CODE:
from numpy import*

n=array(zeros(n, dtype=int))

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:30) 
-- CODE:
from numpy import*

x=array(zeros(n, dtype=int))

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:36) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

fect= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 5
    fect= ones(n,[0])
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:48) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

x= ones(n,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 5
    x= ones(n,[0])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:59:02) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= eval(x,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 5
    n= eval(x,[0])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:59:19) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= ones(x,[0])
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 5
    n= ones(x,[0])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:59:48) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= ones('x,'[0]',')
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 5
    n= ones('x,'[0]',')
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:00:01) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= ones('x','[0]')
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 5
    n= ones('x','[0]')
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:00:10) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= eval('x','[0]')
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 5
    n= eval('x','[0]')
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:00:16) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= array('x','[0]')
while (n, zeros(n, dtype=int)):
	print()
-- ERROR:
File "XXXX", line 5
    n= array('x','[0]')
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:00:45) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= array('x','[0]')
for(x=! 1)
	print()
-- ERROR:
File "XXXX", line 5
    n= array('x','[0]')
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:00:57) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= array('x','[0]')
for(x=! 1)
print(n)
-- ERROR:
File "XXXX", line 5
    n= array('x','[0]')
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:01:08) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= array('x','[0]')

print(n)
-- ERROR:
File "XXXX", line 5
    n= array('x','[0]')
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:01:20) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= array('x',[])

print(n)
-- ERROR:
File "XXXX", line 5
    n= array('x',[])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:01:36) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= array("x,[]")

print(n)
-- ERROR:
File "XXXX", line 5
    n= array("x,[]")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:01:52) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

n= array('x,[]')

print(n)
-- ERROR:
File "XXXX", line 5
    n= array('x,[]')
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:02:04) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

for(array('x,[]')

print(n)
-- ERROR:
File "XXXX", line 7
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:02:12) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

for(array('x,[]')

print(x)
-- ERROR:
File "XXXX", line 7
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:02:18) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

for(array('x,[]')

print(for)
-- ERROR:
File "XXXX", line 7
    print(for)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:02:39) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

for(array(eval('x,[]'))

print(for)
-- ERROR:
File "XXXX", line 7
    print(for)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:03:12) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

for(array(eval('x,[]'))

print(n)
-- ERROR:
File "XXXX", line 7
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:03:29) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

for(array(eval('x,[]'))
	 print(x)

print()
-- ERROR:
File "XXXX", line 6
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:03:40) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

for(array(eval('x,[]'))
	print(x)

-- ERROR:
File "XXXX", line 6
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:04:08) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

for(array(eval('x,[]'))
	print("sorotipo")

-- ERROR:
File "XXXX", line 6
    print("sorotipo")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:03) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

for(array(eval('x,[]'))
	print('[0]'.'[3]')

-- ERROR:
File "XXXX", line 6
    print('[0]'.'[3]')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:17) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

for(array(eval('x,[]'))
print('[0]'.'[3]')

-- ERROR:
File "XXXX", line 6
    print('[0]'.'[3]')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:27) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

if(array(eval('x,[]'))
print('[0]'.'[3]')

-- ERROR:
File "XXXX", line 6
    print('[0]'.'[3]')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:36) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))

if(array(eval('x,[]'))
	print('[0]'.'[3]')

-- ERROR:
File "XXXX", line 6
    print('[0]'.'[3]')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:57) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
	print('[0]'.'[3]')

-- ERROR:
File "XXXX", line 4
    print('[0]'.'[3]')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:01) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
print('[0]'.'[3]')

-- ERROR:
File "XXXX", line 4
    print('[0]'.'[3]')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:22) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
entrada=('[0]'.'[3]')

-- ERROR:
File "XXXX", line 4
    entrada=('[0]'.'[3]')
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:31) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
entrada= ones('[0]'.'[3]')

-- ERROR:
File "XXXX", line 4
    entrada= ones('[0]'.'[3]')
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:44) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
entrada= ones([0])

-- ERROR:
File "XXXX", line 4
    entrada= ones([0])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:07:02) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
Entrada= eval(ones([0])

-- ERROR:
File "XXXX", line 4
    Entrada= eval(ones([0])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:07:19) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
Entrada= eval(ones(zeros(n,[0])

-- ERROR:
File "XXXX", line 4
    Entrada= eval(ones(zeros(n,[0])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:07:30) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
Entrada= eval(ones(zeros(n,[0])))

-- ERROR:
File "XXXX", line 4
    Entrada= eval(ones(zeros(n,[0])))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:07:41) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= array(ones(zeros(n,[0])))

-- ERROR:
File "XXXX", line 5
    Entrada= array(ones(zeros(n,[0])))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:07:47) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= array(eval(zeros(n,[0])))

-- ERROR:
File "XXXX", line 5
    Entrada= array(eval(zeros(n,[0])))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:08:01) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrad= array(eval(zeros(n,[0])))

-- EXECUTION TIME:
0.819876
-- ERROR:
  File "/home/codebench/codes/1826/3180/main.py", line 5
    Entrad= array(eval(zeros(n,[0])))
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:08:03) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrad= array(eval(zeros(n,[0])))

-- ERROR:
File "XXXX", line 5
    Entrad= array(eval(zeros(n,[0])))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:08:16) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
fact= array(eval(zeros(n,[0])))

-- ERROR:
File "XXXX", line 5
    fact= array(eval(zeros(n,[0])))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:08:36) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= array(eval(zeros(x,[0])))

-- ERROR:
File "XXXX", line 5
    Entrada= array(eval(zeros(x,[0])))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:08:46) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= array(eval(x,[0]))

-- ERROR:
File "XXXX", line 5
    Entrada= array(eval(x,[0]))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:09:00) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= array(ones(x,[0]))

-- ERROR:
File "XXXX", line 5
    Entrada= array(ones(x,[0]))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:09:06) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= eval(ones(x,[0]))

-- ERROR:
File "XXXX", line 5
    Entrada= eval(ones(x,[0]))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:09:19) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= ones(x,[0])

-- ERROR:
File "XXXX", line 5
    Entrada= ones(x,[0])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:09:47) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= x(ones[0])

-- ERROR:
File "XXXX", line 5
    Entrada= x(ones[0])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:09:57) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= (x,(ones[0])

-- ERROR:
File "XXXX", line 5
    Entrada= (x,(ones[0])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:10:04) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= (x, ones[0])

-- ERROR:
File "XXXX", line 5
    Entrada= (x, ones[0])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:10:10) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= (x,[0])

-- ERROR:
File "XXXX", line 5
    Entrada= (x,[0])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:11:30) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= (x,[0])

-- ERROR:
File "XXXX", line 5
    Entrada= (x,[0])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:16:10) 
-- CODE:
from numpy import*

x=array(ones(zeros(n, dtype=int))
		  
Entrada= (x,[0])

-- ERROR:
File "XXXX", line 5
    Entrada= (x,[0])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
